Criando Hello World em JS

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "poc-expressjs-firebase",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/app.js",
   "scripts": {
+    "serve": "node app/app.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
