--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app/app.js",
   "scripts": {
-    "serve": "node app/app.js",
+    "serve": "npm run 'serve dev'",
+    "serve dev": "ts-node-dev --respawn --transpileOnly ./app/app.ts",
+    "serve prod": "tsc && node ./build/app.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "express": "^4.17.1",
+    "ts-node-dev": "^1.0.0-pre.43",
     "typescript": "^3.6.3"
   }
 }
