--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "express": "^4.17.1",
+    "firebase-admin": "^8.6.0",
     "ts-node-dev": "^1.0.0-pre.43",
     "typescript": "^3.6.3"
   }
